change_log.txt
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2008-Feb-6  fwb
	improved text scaling
 	automatically compute pin lenght and orientation
	Instances were getting confused with CellDefs
	Circles & Rectangles seem to be correct now
	Design can now include CellDefs
	e2sch works with OrCad version 9 , EDIF from ver 10 has problems
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-dec-3  fwb
	demote symbols (*XTIE* or *JUNCTION*) to connections
	improving netlist quality
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-nov-21 fwb
	fixed property property integer
	multi segment WIRE - OrCad ver 10
	text size per FigGrp
	pick up Instance Ref Designator
   TODO
	remove XTIEs form netlist
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-nov-16 fwb
	removed strndup from edif.y
	added OutPro function to generate a .pro file with libs listed
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-oct-30 fwb 
	fixed CAPSYM.lib - power syms
	better netlist - caps have VCC & GND
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-oct-23 fwb - clean up, fix core crash, pin visability
	TODO:
		o fix Power connections
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-oct-17 fwb - Schematic is useable, not perfect
	eyespy works, PS10 doesn't
	need to hand edit 
	o library for PinUP, PinDown
	o OrCad mistakes (couple Cap positions)
	TODO:
	 	o debug/fix PS10
		o add TIE points
		o try to generate a netlist from EEschema
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-Oct-12 fwb - multiple libs, fixed ARC, DESIGNATOR/VALUE 
	position Demorgan convert & pin name renames
	Looks good enough to start schematic
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-